2006-05-06  Julien Puydt  <jpuydt@free.fr>

	* src/components/dbus-helper.cpp: Incremented
	DBUS_COMPONENT_MINOR_VERSION, since there has been some improvements.

2006-05-05  Julien Puydt  <jpuydt@free.fr>

	* doc/using_dbus.html: Improvements.

2006-04-30  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp src/endpoints/manager.cpp:
	Improved PTRACE's.

2006-04-30  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/manager.cpp src/endpoints/manager.h 
	src/endpoints/pcss.cpp src/endpoints/pcss.h 
	src/endpoints/sip.cpp src/endpoints/sip.h:
	Moved the dial tone to the pccs endpoint in order to prevent a double
	dialtone when a 183 Session Progress message is received.

2006-04-28  Julien Puydt  <jpuydt@free.fr>

	* src/gui/main.cpp: Fixed #337792, thanks Michael Rickmann.

2006-04-23  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-ldap.cpp, src/urlhandler.cpp: 
	Fixed ILS browsing.

2006-04-23  Julien Puydt  <jpuydt@free.fr>

	* src/endpoints/manager.cpp: Fixed #338270.

2006-04-22  Damien Sandras  <dsandras@gnome.org>
	
	* src/gui/chat.cpp: Fixed #336447.

2006-04-22  Damien Sandras  <dsandras@gnome.org>

	* src/endpoints/ekiga.cpp, src/endpoints/manager.cpp,
	src/endpoints/manager.h: Monitor IP address changes to update the 
	listeners. Fixes #335398.

	* src/gui/chat.cpp: Fixed #335857 thanks to Simon Wood.

2006-04-21  Julien Puydt  <jpuydt@free.fr>

	* src/devices/audio.cpp: Fixed #337799, thanks Michael Rickmann.

2006-04-17  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callbacks.cpp: Unbroke a stupid mistake I made in my last
	commit.

2006-04-17  Julien Puydt  <jpuydt@free.fr>

	* src/gui/callbacks.cpp: More complete fix for #337798, thanks to
	Michael Rickmann.

2006-04-15  Jan Schampera <jan.schampera@unix.net>

	* lib/gmcontacts/gmcontacts.h, lib/gmcontacts/gmcontacts.cpp:
	One step forward to a new API, this needed by the roster in future.

2006-04-15  Julien Puydt  <jpuydt@free.fr>
