@@ -1,5 +1,10 @@
 2006-05-06  Julien Puydt  <jpuydt@free.fr>
 
+	* src/gui/preferences.cpp, src/gui/preferences.h: Made readability
+	better (partial fix for #340824).
+
+2006-05-06  Julien Puydt  <jpuydt@free.fr>
+
 	* src/components/dbus-helper.cpp: Incremented
 	DBUS_COMPONENT_MINOR_VERSION, since there has been some improvements.
 
